# otus.lessons.32.01

./: .gitignore  .travis.yml  README.md
docker/: Dockerfile  docker.sh  test.sh
src/: CMakeLists.txt  common.h  main.cpp  rclss.cpp  rclst.cpp  samples.pl  test.cpp
